# design-patterns

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/selfRegisteringFactory/: converterVersions.h  fileConverter.h  fileConverterProxy.h  fileConverterProxyBase.h  jsonFileConverter.h  selfRegisteringFactory.h  tiffFileConverter.h
source/: CMakeLists.txt
source/selfRegisteringFactory/: CMakeLists.txt  converterVersions.cpp  fileConverterProxyBase.cpp  jsonFileConverter.cpp  selfRegisteringFactory.cpp  tiffFileConverter.cpp
