# set(CONVERTERS_LIB_NAME "converters")

# add_library(${CONVERTERS_LIB_NAME} SHARED
#  "tiffFileConverter.cpp"
#  "jsonFileConverter.cpp"
# )

# # add_library(srfl SHARED
# #  "selfRegisteringFactory.cpp"
# # )


# target_include_directories(${CONVERTERS_LIB_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/include")
# target_include_directories(srfl PUBLIC "${CMAKE_SOURCE_DIR}/include")